--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>image-anotation</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Annotations</title>
+    <style>
+      .image {
+        width: 100%;
+      }
+      .boxNotActive {
+        border: 3px solid grey;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="">
+      <button>Point</button>
+      <button>Square</button>
+      <button>Circle</button>
+    </div>
+    <div>
+      <img
+        src="./images.jpeg"
+        id="image"
+        onClick="newZone(event);"
+        class="image"
+      />
+    </div>
+  </body>
+  <script>
+    function newZone(_event) {
+      const objZone = {
+        x: _event.clientX,
+        y: _event.clientY,
+        width: 10,
+        height: 50,
+        sequence: Date.now(),
+      };
+
+      const theDiv = document.createElement("div");
+
+      theDiv.className = "boxNotActive";
+      theDiv.id = "box-" + objZone.sequence;
+      theDiv.style.position = "absolute";
+      theDiv.style.top = objZone.y = objZone.x;
+      theDiv.style.left = objZone.x = objZone.y;
+      theDiv.style.width = objZone.width;
+      theDiv.style.height = objZone.height;
+      theDiv.canDelete = objZone.canDelete;
+      console.log(document.getElementsByTagName("body")[0]);
+      // document.getElementsByTagName("body")[0].appendChild(theDiv);
+    }
+  </script>
 </html>
