--- a/Home.html
+++ b/Home.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Annotation</title>
     <link rel="stylesheet" href="./home.css" />
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery.min.js"
+    ></script>
   </head>
   <body>
     <div class="controls">
-      <button onclick="setType('ractangle')">Ractangle</button>
+      <button onclick="setType('rectangle')">Rectangle</button>
       <button onclick="setType('circle')">Circle</button>
       <button onclick="setType('point')">Point</button>
       <button onclick="setType('erase')">Erase</button>
       <button onclick="setType('clear')">Clear</button>
     </div>
-    <canvas id="canvas"></canvas>
+    <div class="canvas-block">
+      <canvas id="canvas"></canvas>
+      <canvas id="canvas2"></canvas>
+    </div>
   </body>
   <script src="./home.js"></script>
 </html>
