--- a/Home.html
+++ b/Home.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Annotation</title>
     <link rel="stylesheet" href="./home.css" />
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://code.jquery.com/jquery.min.js"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <div class="controls">
@@ -18,6 +18,7 @@
       <button onclick="setType('point')">Point</button>
       <button onclick="setType('erase')">Erase</button>
       <button onclick="setType('clear')">Clear</button>
+      <button onclick="setType('rotate')">Rotate</button>
     </div>
     <div class="canvas-block">
       <canvas id="canvas"></canvas>
