--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Annotations</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="controls">
@@ -15,6 +21,7 @@
       <button class="control-btn" onclick="setType('circle')">Circle</button>
       <button class="control-btn" onclick="setType('point')">Point</button>
       <button class="control-btn" onclick="setType('clear')">Clear</button>
+      <button class="control-btn" onclick="setType('erase')">erase</button>
     </div>
     <div style="display: none">
       <textarea name="ctrZones"></textarea>
@@ -22,8 +29,23 @@
     <!-- <div class="image-box">
     </div> -->
     <div id="main-body">
-      <img src="./images.jpeg" id="image" class="imagePortrait" />
+      <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
+      <img
+        src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg"
+        id="image"
+        class="imagePortrait"
+      />
+
+      <!-- popover content -->
+      <div id="popover-content" class="d-none">
+        <h1>Hi</h1>
+      </div>
     </div>
   </body>
   <script src="./index.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"
+  ></script>
 </html>
