--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       </div>
       <div class="mx-3">
         <div class="all-list">
+          <span>Annotation List</span>
           <ul id="annotationList"></ul>
         </div>
       </div>
