--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           </button>
           <button class="control-btn" onclick="setType('erase')">Erase</button>
           <button class="control-btn" onclick="setType('zoomIn')">
-            Zoom In
+            Zoom In <i class="fa-solid fa-magnifying-glass-plus"></i>
           </button>
           <button class="control-btn" onclick="setType('zoomReset')">
             Zoom Reset
           </button>
           <button class="control-btn" onclick="setType('zoomOut')">
-            Zoom Out
+            Zoom Out <i class="fa-solid fa-magnifying-glass-minus"></i>
           </button>
           <button class="control-btn" onclick="setType('rotate')">
             Rotate
