--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link
       rel="stylesheet"
@@ -49,7 +50,7 @@
             </button>
             <button class="control-btn" onclick="setType('erase')">Erase <i class="fa fa-eraser"></i> </button>
             <button class="control-btn" onclick="setType('rotate')">
-              Rotate <i class="fa-solid fa-rotate"></i>
+              Rotate 
             </button>
           </div>
           <div class=""> 
