--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div id="container" class="">
           <div id="main-body" style="position: relative">
             <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
-            <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
 
+            <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
             <img
               src="./pexels-pedro-slinger-13519033.jpg"
               id="image"
@@ -119,6 +119,7 @@
         </div>
       </div>
       <div class="mx-3 z-1">
+        <span id="zoomLevel"></span>
         <div class="all-list text-primary">
           <span>Annotation List</span>
           <ul id="annotationList"></ul>
