--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Image Annotations</title>
     <link rel="stylesheet" href="./index.css" />
     <link
+      rel="shortcut icon"
+      href="./png-clipart-annotation-annotated-bibliography-book-book-angle-text.png"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
@@ -72,11 +77,7 @@
             <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
 
             <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
-            <img
-              src="./pexels-pedro-slinger-13519033.jpg"
-              id="image"
-              class="imagePortrait"
-            />
+            <img src="" id="image" class="imagePortrait" />
 
             <!-- popover content -->
             <div id="popover" class="">
