--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <textarea name="ctrZones"></textarea>
         </div>
         <div id="container" class="">
-          <div id="main-body" style="position: relative">
+          <div id="main-body" style="position: absolute">
             <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
 
             <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
