--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Annotations</title>
-    <link rel="stylesheet" href="./index.css" />
     <link
       rel="shortcut icon"
       href="./png-clipart-annotation-annotated-bibliography-book-book-angle-text.png"
@@ -22,6 +21,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="./fabric.min.js"></script>
+    <link rel="stylesheet" href="./Home.css" />
   </head>
   <body>
     <div class="d-flex justify-content-between align-content-center">
@@ -34,14 +35,14 @@
             >
               Rectangle <i class="fa fa-square"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('circle')">
-              Circle <i class="fa fa-circle-o"></i>
+            <button class="btn btn-outline-primary" onclick="setType('oval')">
+              Oval <i class="fa fa-circle-o"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('point')">
               Point <i class="fa fa-circle"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('erase')">
-              Erase <i class="fa fa-eraser"></i>
+            <button class="btn btn-outline-primary" onclick="setType('delete')">
+              Delete <i class="fa fa-remove"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('clear')">
               Clear All
@@ -74,11 +75,9 @@
         </div>
         <div id="container" class="">
           <div id="main-body" style="position: absolute">
-            <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
-
-            <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
-            <img src="" id="image" class="imagePortrait" />
-
+            <div id="canvas-container">
+              <canvas id="canvas" class="canvas"></canvas>
+            </div>
             <!-- popover content -->
             <div id="popover" class="">
               <div class="card" style="width: 15rem">
@@ -128,7 +127,7 @@
       </div>
     </div>
   </body>
-  <script src="./index.js"></script>
+  <script src="./Home.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
