--- a/Home.html
+++ b/Home.html
@@ -131,7 +131,7 @@
       id="canvas-container"
       class="d-flex align-items-center justify-content-center"
     >
-      <canvas id="canvas" class="canvas"></canvas>
+      <!-- <canvas id="canvas" class="canvas"></canvas> -->
     </div>
   </body>
   <script src="./Home.js"></script>
