--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./png-clipart-annotation-annotated-bibliography-book-book-angle-text.png"
       type="image/x-icon"
     />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +21,17 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css"
+      integrity="sha512-cHxvm20nkjOUySu7jdwiUxgGy11vuVPE9YeK89geLMLMMEOcKFyS2i+8wo0FOwyQO/bL8Bvq1KMsqK4bbOsPnA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -34,18 +45,24 @@
             >
               Rectangle <i class="fa fa-square"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('circle')">
-              Circle <i class="fa fa-circle-o"></i>
+            <button class="btn btn-outline-primary" onclick="setType('oval')">
+              Oval <i class="fa-solid fa-circle"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('point')">
               Point <i class="fa fa-circle"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('erase')">
-              Erase <i class="fa fa-eraser"></i>
+              Delete <i class="fa-solid fa-trash"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('clear')">
-              Clear All
+              Clear All <i class="fa-solid fa-eraser"></i>
             </button>
+            <!-- <button class="btn btn-outline-primary" onclick="setType('undo')">
+              Undo <i class="fa-solid fa-rotate-left"></i>
+            </button>
+            <button class="btn btn-outline-primary" onclick="setType('redo')">
+              Redo <i class="fa-solid fa-rotate-right"></i>
+            </button> -->
           </div>
           <div class="">
             <button class="btn btn-outline-primary" onclick="setType('rotate')">
@@ -72,47 +89,45 @@
         <div style="display: none">
           <textarea name="ctrZones"></textarea>
         </div>
-        <div id="container" class="">
-          <div id="main-body" style="position: absolute">
-            <!-- <img src="./images.jpeg" id="image" class="imagePortrait" /> -->
-
-            <!-- src="https://cdn.pixabay.com/photo/2015/11/16/14/43/cat-1045782__340.jpg" -->
-            <img src="" id="image" class="imagePortrait" />
-
-            <!-- popover content -->
-            <div id="popover" class="">
-              <div class="card" style="width: 15rem">
-                <div class="card-body">
-                  <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
-                  <ul id="details-list"></ul>
-                  <form action="" method="">
-                    <div class="mb-3">
-                      <label for="details" class="form-label">Details</label>
-                      <input
-                        placeholder="Enter detail"
-                        autocomplete="off"
-                        type="text"
-                        class="form-control"
-                        id="details"
-                      />
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <button
-                        type="button"
-                        onclick="handelClose();"
-                        class="btn btn-outline-primary"
-                      >
-                        Close
-                      </button>
-                      <button
-                        type="button"
-                        onclick="handelSubmit();"
-                        class="btn btn-primary"
-                      >
-                        Submit
-                      </button>
-                    </div>
-                  </form>
+        <div class="main-container">
+          <div id="container" class="">
+            <div id="main-body">
+              <img src="" id="image" class="imagePortrait" />
+              <!-- popover content -->
+              <div id="popover" class="">
+                <div class="card" style="width: 15rem">
+                  <div class="card-body">
+                    <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
+                    <ul id="details-list"></ul>
+                    <form action="" method="">
+                      <div class="mb-3">
+                        <label for="details" class="form-label">Details</label>
+                        <input
+                          placeholder="Enter detail"
+                          autocomplete="off"
+                          type="text"
+                          class="form-control"
+                          id="details"
+                        />
+                      </div>
+                      <div class="d-flex justify-content-between">
+                        <button
+                          type="button"
+                          onclick="handelClose();"
+                          class="btn btn-outline-primary"
+                        >
+                          Close
+                        </button>
+                        <button
+                          type="button"
+                          onclick="handelSubmit();"
+                          class="btn btn-primary"
+                        >
+                          Submit
+                        </button>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
