--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button class="btn btn-outline-primary" onclick="setType('point')">
               Point <i class="fa fa-circle"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('erase')">
+            <button class="btn btn-outline-primary" onclick="setType('delete')">
               Delete <i class="fa-solid fa-trash"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('clear')">
