--- a/index.html
+++ b/index.html
@@ -89,43 +89,45 @@
         <div style="display: none">
           <textarea name="ctrZones"></textarea>
         </div>
-        <div class="main-container">
-          <div id="main-body">
-            <img src="" id="image" class="imagePortrait" />
-            <!-- popover content -->
-            <div id="popover" class="">
-              <div class="card" style="width: 15rem">
-                <div class="card-body">
-                  <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
-                  <ul id="details-list"></ul>
-                  <form action="" method="">
-                    <div class="mb-3">
-                      <label for="details" class="form-label">Details</label>
-                      <input
-                        placeholder="Enter detail"
-                        autocomplete="off"
-                        type="text"
-                        class="form-control"
-                        id="details"
-                      />
-                    </div>
-                    <div class="d-flex justify-content-between">
-                      <button
-                        type="button"
-                        onclick="handelClose();"
-                        class="btn btn-outline-primary"
-                      >
-                        Close
-                      </button>
-                      <button
-                        type="button"
-                        onclick="handelSubmit();"
-                        class="btn btn-primary"
-                      >
-                        Submit
-                      </button>
-                    </div>
-                  </form>
+        <div class="">
+          <div class="main-container">
+            <div id="main-body">
+              <img src="" id="image" class="imagePortrait" />
+              <!-- popover content -->
+              <div id="popover" class="">
+                <div class="card" style="width: 15rem">
+                  <div class="card-body">
+                    <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
+                    <ul id="details-list"></ul>
+                    <form action="" method="">
+                      <div class="mb-3">
+                        <label for="details" class="form-label">Details</label>
+                        <input
+                          placeholder="Enter detail"
+                          autocomplete="off"
+                          type="text"
+                          class="form-control"
+                          id="details"
+                        />
+                      </div>
+                      <div class="d-flex justify-content-between">
+                        <button
+                          type="button"
+                          onclick="handelClose();"
+                          class="btn btn-outline-primary"
+                        >
+                          Close
+                        </button>
+                        <button
+                          type="button"
+                          onclick="handelSubmit();"
+                          class="btn btn-primary"
+                        >
+                          Submit
+                        </button>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
