--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <button class="btn btn-outline-primary" onclick="setType('clear')">
               Clear All <i class="fa-solid fa-eraser"></i>
             </button>
-            <!-- <button class="btn btn-outline-primary" onclick="setType('undo')">
+            <button class="btn btn-outline-primary" onclick="setType('undo')">
               Undo <i class="fa-solid fa-rotate-left"></i>
             </button>
             <button class="btn btn-outline-primary" onclick="setType('redo')">
               Redo <i class="fa-solid fa-rotate-right"></i>
-            </button> -->
+            </button>
           </div>
           <div class="">
             <button class="btn btn-outline-primary" onclick="setType('rotate')">
@@ -91,42 +91,46 @@
         </div>
         <div class="">
           <div class="main-container">
-            <div id="main-body">
-              <img src="" id="image" class="imagePortrait" />
-              <!-- popover content -->
-              <div id="popover" class="">
-                <div class="card" style="width: 15rem">
-                  <div class="card-body">
-                    <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
-                    <ul id="details-list"></ul>
-                    <form action="" method="">
-                      <div class="mb-3">
-                        <label for="details" class="form-label">Details</label>
-                        <input
-                          placeholder="Enter detail"
-                          autocomplete="off"
-                          type="text"
-                          class="form-control"
-                          id="details"
-                        />
-                      </div>
-                      <div class="d-flex justify-content-between">
-                        <button
-                          type="button"
-                          onclick="handelClose();"
-                          class="btn btn-outline-primary"
-                        >
-                          Close
-                        </button>
-                        <button
-                          type="button"
-                          onclick="handelSubmit();"
-                          class="btn btn-primary"
-                        >
-                          Submit
-                        </button>
-                      </div>
-                    </form>
+            <div class="cont">
+              <div id="main-body">
+                <!-- <img src="" id="image" class="imagePortrait" /> -->
+                <!-- popover content -->
+                <div id="popover" class="">
+                  <div class="card" style="width: 15rem">
+                    <div class="card-body">
+                      <i class="fa-solid fa-xmark" onclick="handelClose();"></i>
+                      <ul id="details-list"></ul>
+                      <form action="" method="">
+                        <div class="mb-3">
+                          <label for="details" class="form-label"
+                            >Details</label
+                          >
+                          <input
+                            placeholder="Enter detail"
+                            autocomplete="off"
+                            type="text"
+                            class="form-control"
+                            id="details"
+                          />
+                        </div>
+                        <div class="d-flex justify-content-between">
+                          <button
+                            type="button"
+                            onclick="handelClose();"
+                            class="btn btn-outline-primary"
+                          >
+                            Close
+                          </button>
+                          <button
+                            type="button"
+                            onclick="handelSubmit();"
+                            class="btn btn-primary"
+                          >
+                            Submit
+                          </button>
+                        </div>
+                      </form>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -134,7 +138,7 @@
           </div>
         </div>
       </div>
-      <div class="mx-3 z-1">
+      <div class="mx-3 z-1 abcd">
         <span id="zoomLevel"></span>
         <div class="all-list text-primary">
           <span>Annotation List</span>
