--- a/index.html
+++ b/index.html
@@ -57,10 +57,18 @@
             <button class="btn btn-outline-primary" onclick="setType('clear')">
               Clear All <i class="fa-solid fa-eraser"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('undo')">
+            <button
+              class="btn btn-outline-primary"
+              id="undoBtn"
+              onclick="setType('undo')"
+            >
               Undo <i class="fa-solid fa-rotate-left"></i>
             </button>
-            <button class="btn btn-outline-primary" onclick="setType('redo')">
+            <button
+              class="btn btn-outline-primary"
+              id="redoBtn"
+              onclick="setType('redo')"
+            >
               Redo <i class="fa-solid fa-rotate-right"></i>
             </button>
           </div>
